Build Jakarta Map and Java Map with zoom and draggable

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -2,9 +2,10 @@ $brand-primary: #673AB7;
 
 #maps{
   display: block;
-  background-color: $gray-lighter;
+  // background-color: $gray-lighter;
 
   #jakarta{
+    
   }
 
   #java{
