--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -17,11 +17,9 @@ nav.navbar.navbar-inverse.navbar-fixed-bottom
 .container-fluid
   .row
     .col-md-8 id="maps"
-      .row
-        .col-md-12 id="jakarta"
-          | Jakarta
-      .row
-        .col-md-12 id="java"
-          | Java
+      .row-fluid
+        #jakarta
+      .row-fluid
+        #java
     .col-md-4 id="data"
       | Data
