Going client side from here.. all server side processing is put aside.

--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -22,4 +22,4 @@ nav.navbar.navbar-inverse.navbar-fixed-bottom
       .row-fluid
         #java
     .col-md-4 id="data"
-      | Data
+      = render 'filter'
