Connect Java District to Collector Yards in Jakarta; Change Maps Color;

--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -17,9 +17,9 @@ nav.navbar.navbar-inverse.navbar-fixed-bottom
 .container-fluid
   .row
     .col-md-8 id="maps"
-      .row-fluid
-        #jakarta
-      .row-fluid
-        #java
+      .row
+        .col-md-12#jakarta
+      .row
+        .col-md-12#java
     .col-md-4 id="data"
       = render 'filter'
