IN PROGRESS: Filter

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,10 @@
 @import "bootstrap";
 @import "map";
 @import "filter";
+
+// jquery-ui
+@import "themes/jquery.ui.smoothness";
+@import "jquery.ui.core";
+@import "jquery.ui.theme";
+@import "jquery.ui.menu";
+@import "jquery.ui.autocomplete";
