IN PROGRESS: Filter queries has been done, leaving export .csv feature.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,11 +2,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "map";
-@import "filter";
 
 // jquery-ui
-@import "themes/jquery.ui.smoothness";
+// @import "themes/jquery.ui.smoothness";
+@import "jquery.ui.variables";
 @import "jquery.ui.core";
 @import "jquery.ui.theme";
 @import "jquery.ui.menu";
 @import "jquery.ui.autocomplete";
+
+@import "filter";
