--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -16,10 +16,11 @@ nav.navbar.navbar-inverse.navbar-fixed-bottom
 
 .container-fluid
   .row
-    .col-md-8 id="maps"
+    .col-md-8#maps
       .row
         .col-md-12#jakarta
       .row
         .col-md-12#java
+      #line_canvas
     .col-md-4 id="data"
       = render 'filter'
