Create function for connect CY to CY/LBM and CY to CY District

--- a/app/views/map/_filter.html.slim
+++ b/app/views/map/_filter.html.slim
@@ -41,6 +41,8 @@
       = link_to "Sukabumi", "#", class: "btn btn-link btn-call-origin", data: { district: "SUKABUMI" }
       = link_to "Bogor", "#", class: "btn btn-link btn-call-origin", data: { district: "BOGOR" }
       = link_to "Tanggerang", "#", class: "btn btn-link btn-call-origin", data: { district: "TANGERANG" }
+      = link_to "D-BGR-195", "#", class: "btn btn-link btn-call-cy", data: { code: "D-BGR-195" }
+      = link_to "D-BGR-073", "#", class: "btn btn-link btn-call-cy", data: { code: "D-BGR-073" }
 
     = submit_tag "OK", class: "btn btn-primary"
     = link_to "Clear", root_path, class: "btn btn-link"
