--- a/app/views/map/_filter.html.slim
+++ b/app/views/map/_filter.html.slim
@@ -4,31 +4,22 @@
 
   = form_tag movements_path, method: "GET" do
 
-    .row
-      .col-md-12
-        .form-group
-          label Search by name or code (or click on the map)
-          = text_field_tag "keyword", "", class: "form-control", data: { source: movements_path }
+    / .row
+    /   .col-md-12
+    /     .form-group
+    /       label Search by name or code (or click on the map)
+    /       = text_field_tag "keyword", "", class: "form-control", data: { source: movements_path }
 
     .row
-      .col-md-6
+      .col-md-4
         .form-group
-          label Source
-          - %w(origin_district cy_code cy_sub_district).each_with_index do |item, index|
-            .radio
+          label = "Type"
+          - %w(AB AS BR CY FA LBM LC blank).each_with_index do |item, index|
+            .checkbox
               label
-                = radio_button_tag "source_type", item, (index == 0)
-                = item.titleize.upcase
-      .col-md-6
-        .form-group
-          label Destination
-          - %w(collector_yards cy_sub_districts cy_districts).each_with_index do |item, index|
-            .radio
-              label
-                = radio_button_tag "destination_type", item, (index == 0)
-                = item.titleize.upcase
-    .row
-      .col-md-12
+                = check_box_tag "types[]", item, true
+                = item == 'blank' ? "<i>blank</i>".html_safe : item.titleize.upcase
+      .col-md-4
         .form-group
           label = "Species"
           - SpeciesType.all.each do |s|
@@ -36,13 +27,58 @@
               label
                 = check_box_tag "species_types[]", s.id, true
                 = s.code.blank? ? "<i>blank</i>".html_safe : s.code
+      .col-md-4
+        .form-group
+          label = "Movement type"
+          - %w(in out).each_with_index do |item, index|
+            .checkbox
+              label
+                = check_box_tag "movement_types[]", item, true
+                = item.titleize.upcase
 
-      = link_to "Lebak", "#", class: "btn btn-link btn-call-origin", data: { district: "LEBAK" }
-      = link_to "Sukabumi", "#", class: "btn btn-link btn-call-origin", data: { district: "SUKABUMI" }
-      = link_to "Bogor", "#", class: "btn btn-link btn-call-origin", data: { district: "BOGOR" }
-      = link_to "Tanggerang", "#", class: "btn btn-link btn-call-origin", data: { district: "TANGERANG" }
-      = link_to "D-BGR-195", "#", class: "btn btn-link btn-call-cy", data: { code: "D-BGR-195" }
-      = link_to "D-BGR-073", "#", class: "btn btn-link btn-call-cy", data: { code: "D-BGR-073" }
+    .row
+      .col-md-12
+        .form-group
+          label = "Weekly Volume"
+          .row
+            .col-md-6
+              .input-group
+                .input-group-addon
+                  | From
+                = number_field_tag "weekly_volume[from]", "", class: "form-control"
+            .col-md-6
+              .input-group
+                .input-group-addon
+                  | To
+                = number_field_tag "weekly_volume[to]", "", class: "form-control"
+
+    .row
+      .col-md-12
+        .form-group
+          label = "Distance (in km)"
+          .row
+            .col-md-6
+              .input-group
+                .input-group-addon
+                  | From
+                = number_field_tag "distance[from]", "", class: "form-control"
+            .col-md-6
+              .input-group
+                .input-group-addon
+                  | To
+                = number_field_tag "distance[to]", "", class: "form-control"
+
+    .row
+      .col-md-12
+        = submit_tag "Show results", class: "btn btn-primary"
+
+
+      / = link_to "Lebak", "#", class: "btn btn-link btn-call-origin", data: { district: "LEBAK" }
+      / = link_to "Sukabumi", "#", class: "btn btn-link btn-call-origin", data: { district: "SUKABUMI" }
+      / = link_to "Bogor", "#", class: "btn btn-link btn-call-origin", data: { district: "BOGOR" }
+      / = link_to "Tanggerang", "#", class: "btn btn-link btn-call-origin", data: { district: "TANGERANG" }
+      / = link_to "D-BGR-195", "#", class: "btn btn-link btn-call-cy", data: { code: "D-BGR-195" }
+      / = link_to "D-BGR-073", "#", class: "btn btn-link btn-call-cy", data: { code: "D-BGR-073" }
 
     / = submit_tag "OK", class: "btn btn-primary"
     / = link_to "Clear", root_path, class: "btn btn-link"
