--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -28,9 +28,8 @@ nav.navbar.navbar-inverse.navbar-fixed-bottom
         li role="presentation" class="active"
           a href="#filter" aria-controls="#filter" role="tab" data-toggle="tab" Filter
         li role="presentation"
-          a href="#result" aria-controls="#result" role="tab" data-toggle="tab" Result
+          a href="#results" aria-controls="#results" role="tab" data-toggle="tab" Result
       .tab-content
         .tab-pane role="tabpanel" id="filter" class="active"
           = render 'filter'
-        .tab-pane role="tabpanel" id="result"
-          = render 'result'
+        .tab-pane role="tabpanel" id="results"
