--- a/app/views/movements/results.js.slim
+++ b/app/views/movements/results.js.slim
@@ -1,1 +1,1 @@
-// Panggil fungsi untuk mengubah peta berdasarkan @movement_ins dan @movement_outs
+| $("#results").html("#{ j render 'map/results', movement_outs: @movement_outs }");
