Filter CY on D3 Map with new filter

--- a/app/views/movements/results.js.slim
+++ b/app/views/movements/results.js.slim
@@ -1,1 +1,4 @@
 | $("#results").html("#{ j render 'map/results', movement_outs: @movement_outs }");
+| var data = JSON.parse("#{ j @movement_outs.to_json.html_safe }");
+| cyFiltered(data);
+// | console.log(data);
