--- a/app/views/movements/results.js.slim
+++ b/app/views/movements/results.js.slim
@@ -1,5 +1,6 @@
 | $("#results").html("#{ j render 'map/results', movement_outs: @movement_outs }");
 | var data = JSON.parse("#{ j @movement_outs.to_json.html_safe }");
 | cyFiltered(data);
+| clearResult();
 | setSideHeight();
 // | console.log(data);
