--- a/app/views/movements/results.js.slim
+++ b/app/views/movements/results.js.slim
@@ -2,5 +2,5 @@
 | var data = JSON.parse("#{ j @movement_outs.to_json.html_safe }");
 | cyFiltered(data);
 | clearResult();
+| setFilteredCyToDefault();
 | setSideHeight();
-// | console.log(data);
