--- a/app/assets/stylesheets/filter.scss
+++ b/app/assets/stylesheets/filter.scss
@@ -1,3 +1,11 @@
 .box:not(:last-child){
   margin-bottom: 8px;
 }
+
+.checkbox{
+  margin-top: 0;
+}
+
+.toggle-checkboxes-label{
+  font-weight: bold;
+}
